--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "kartik\\time\\": ""
+            "ilogs\\time\\": ""
         }
     }
 }
